Added the ability to have multipe XYPanes in a XYChart